in case mod_pagespeed is enabled (+5 squashed commits) Squashed commits: [53366e8] More optimised this wat [4ea0072] Fix redirect and some optimisations [bc48e2e] fixing last errors [9b72cef] Adding font to exclusion [5798215] Minification

--- a/Website/httpdocs/assets/css/style.css
+++ b/Website/httpdocs/assets/css/style.css
@@ -210,7 +210,7 @@ display: none;
 
 /* ===== DOWNLOAD AREA ===== */
 .honk {
-  background-image: url("../img/clown.gif");
+  background-image: url("../img/clown.png");
   width: 50px;
   height: 50px;
   background-size: 100%;
